Correção Sobre nós, Depoimento e Parceiros
Posição do título do Sobre nós, posição do autor do Depoimento e
subtitulo de parceiros.

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <div class="separacao"></div>
                 <div class="barra"></div>
                 <div class="separacao2"></div>
-                <div id="content_depoimento_item">
+                <div class="content_depoimento_item">
                 	<span class="depoimento"><img src="assets/img/aspas_depoimento.png" alt="" title="" >&nbsp;Lorem ipsum dolor sit amet, consect adipiscing elit consectetur adipiscing elit.</span>
                     <img src="assets/img/john.jpg"  width="40" height="40" alt="" title="" class="img-thumbnail img-circle">
                     <span class="nome">John Snow</span>
@@ -202,7 +202,7 @@
             </div><!--FIM DIV CONTENT BANNER-->
             
             <div id="content_parceiro">
-            	<div id="content_parceiro_box">
+            	<div class="content_parceiro_box">
                     <span class="titulo">nossos parceiros</span>
                     <span class="texto">Credibilidade nas parcerias</span>
                 </div><!--FIM DIV CONTENT PARCEIRO BOX-->
